[gd_scene load_steps=22 format=3 uid="uid://372llonby7vi"]

[ext_resource type="Script" path="res://scenes/enemies/slime.gd" id="1_frdg8"]
[ext_resource type="Texture2D" uid="uid://c4mqc0sobl5up" path="res://assets/enemies/slime-animation.png" id="2_ehpnq"]
[ext_resource type="Texture2D" uid="uid://cbf2fvp0ai7tr" path="res://assets/enemies/shadow.png" id="3_tmj7w"]
[ext_resource type="PackedScene" uid="uid://bkkos8jkwtkru" path="res://scenes/helper/hurt_box.tscn" id="4_yps3j"]
[ext_resource type="PackedScene" uid="uid://c5v2apnli0vd2" path="res://scenes/helper/stats.tscn" id="5_u55on"]
[ext_resource type="PackedScene" uid="uid://d2kxl47qg5uv6" path="res://scenes/helper/player_detection_zone.tscn" id="6_0wk3v"]
[ext_resource type="PackedScene" uid="uid://5qxqadb5k7qt" path="res://scenes/helper/hit_box.tscn" id="7_sgtsu"]
[ext_resource type="PackedScene" uid="uid://2rp4f5b4d1y0" path="res://scenes/helper/soft_collision.tscn" id="8_p7pro"]
[ext_resource type="PackedScene" uid="uid://cv242mlh4ysg4" path="res://scenes/enemies/wander_controller.tscn" id="9_bxte8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oane3"]
atlas = ExtResource("2_ehpnq")
region = Rect2(0, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8427"]
atlas = ExtResource("2_ehpnq")
region = Rect2(14, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxuv0"]
atlas = ExtResource("2_ehpnq")
region = Rect2(0, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_63voi"]
atlas = ExtResource("2_ehpnq")
region = Rect2(14, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3xvr"]
atlas = ExtResource("2_ehpnq")
region = Rect2(28, 0, 14, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bitr"]
atlas = ExtResource("2_ehpnq")
region = Rect2(42, 0, 14, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_oy5a8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oane3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8427")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxuv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63voi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3xvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bitr")
}],
"loop": false,
"name": &"jump",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ndre6"]
radius = 3.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ijn26"]
radius = 4.0
height = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mha1a"]
radius = 33.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ci72l"]
radius = 3.16228

[sub_resource type="CircleShape2D" id="CircleShape2D_s6f2v"]
radius = 6.0

[node name="Slime" type="CharacterBody2D" groups=["EnemyGameEvent"]]
collision_layer = 16
script = ExtResource("1_frdg8")

[node name="Slime" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 5)
sprite_frames = SubResource("SpriteFrames_oy5a8")
animation = &"jump"
autoplay = "default"
frame = 3
frame_progress = 1.0
offset = Vector2(0, -10.125)

[node name="Shadow" type="Sprite2D" parent="."]
scale = Vector2(1, 1.16667)
texture = ExtResource("3_tmj7w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ndre6")

[node name="HurtBox" parent="." instance=ExtResource("4_yps3j")]
visible = false
collision_mask = 8
offsetY = -8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, -9)
shape = SubResource("CapsuleShape2D_ijn26")
debug_color = Color(0.72286, 0.416955, 0.619492, 0.42)

[node name="Stats" parent="." instance=ExtResource("5_u55on")]
maxHealth = 2

[node name="PlayerDetectionZone" parent="." instance=ExtResource("6_0wk3v")]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource("CircleShape2D_mha1a")

[node name="HitBox" parent="." instance=ExtResource("7_sgtsu")]
visible = false
collision_layer = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_ci72l")
disabled = false
debug_color = Color(0, 0.643137, 0.286275, 0.419608)

[node name="SoftCollision" parent="." instance=ExtResource("8_p7pro")]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource("CircleShape2D_s6f2v")

[node name="WanderController" parent="." instance=ExtResource("9_bxte8")]

[node name="StunTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]

[editable path="HurtBox"]
[editable path="PlayerDetectionZone"]
[editable path="HitBox"]
[editable path="SoftCollision"]
